2001-04-26  Andreas J. Koenig  <andreas.koenig@anima.de>

	* Added a loadme test. That's better than nothing. Writing a
	comprehensive test seems pretty difficult.

	* Remove a forgotten warning. Qualify remaining warnings as coming
	from us. Protect against an unini warning when the sessionfile
	that was requested by the user could not be read.

2001-04-24  Andreas J. Koenig  <andreas.koenig@anima.de>

	* TIEHASH: Allow that the tie is called without CounterFile
	argument. Previous versions died on that because they called
	generate_id. Now we skip that if there is no CounterFile argument,
	thus reusing the previous session file.

2001-04-15  Andreas J. Koenig  <andreas.koenig@anima.de>

	* Counted.pm: "use Apache::Session 1.5" to make sure nobody tries
	this with an older Apache::Session.

	* We now try harder to repair an incomplete installation.

2000-10-31  Andreas J. Koenig  <andreas.koenig@anima.de>

	* materialize: HostID and HostURL feature implemented that
	downloads sessiondata from a different host if we are running on
	the wrong host

	* remove: disabled remove as I suspect using remove with Counted
	is always an error.

	* update: if the directory for the storefile does not exist,
	create it instead of croaking.

	* materialize: if the session file doesn't exist, just warn, don't
	die and set data to empty hashref and the serialized data to the
	counterpart.

2000-07-01  Andreas J. Koenig  <andreas.koenig@anima.de>

	* Eliminated TreeStore as a separate module altogether and slurped
	its functionality into CountedStore. I saw no modular use for it
	anymore.

2000-06-25  Andreas J. Koenig  <andreas.koenig@anima.de>

	* Made Counted.pm work with Apache::Session 1.51. Added Tree.pm
	and TreeStore.pm that were dropped from the Apache::Session main
	distribution. I have not yet understood all implications of the
	(undocumented?) interface changes that happened between
	Apache::Session 1.03 and 1.50, so I'm probably not very